--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/zhandouxiaojiji/behavior3editor/issues"
   },
-  "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme"
+  "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
+  "devDependencies": {
+    "source-map-loader": "^1.1.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2"
+  },
+  "dependencies": {
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
