--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "behavior3editor",
   "version": "0.0.1",
   "description": "行为树编辑器",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "webpack --config webpack.common.config.js",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,13 @@
     "source-map-loader": "^1.1.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "electron": "^10.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
