--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "webpack --config webpack.common.config.js",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "electron": "^10.1.3",
+    "electron-packager": "^15.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
