--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^16.9.8",
     "electron": "^10.1.3",
     "electron-packager": "^15.1.0",
+    "gg-editor": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
