--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
