--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "行为树编辑器",
   "main": "./dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "webpack --config webpack.common.config.js",
+    "prestart": "webpack --config webpack.config.js",
     "start": "electron .",
     "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build"
   },
