--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.6.6",
     "electron": "^10.1.3",
     "electron-packager": "^15.1.0",
     "gg-editor": "^3.1.3",
