--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@antv/g6": "^3.8.1",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
     "electron": "^10.1.3",
     "electron-packager": "^15.1.0",
-    "g6": "^0.2.0",
-    "gg-editor": "^3.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
