--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
     "electron": "^10.1.3",
+    "electron-localshortcut": "^3.2.1",
     "electron-packager": "^15.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
