--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prestart": "webpack --config webpack.config.js",
     "start": "electron .",
-    "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build --overwrite"
+    "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build --overwrite",
+    "dist": "npm run prestart && electron-builder --dir && electron-builder --win --x64"
   },
   "repository": {
     "type": "git",
@@ -17,25 +18,32 @@
   "bugs": {
     "url": "https://github.com/zhandouxiaojiji/behavior3editor/issues"
   },
+  "build": {
+    "appId": "com.example.app",
+    "directories":{
+        "output":"build"
+    }
+  },
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
   "devDependencies": {
     "css-loader": "^4.3.0",
+    "electron-builder": "^22.9.1",
     "file-loader": "^6.1.1",
     "source-map-loader": "^1.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "electron": "^10.1.3",
+    "electron-localshortcut": "^3.2.1",
+    "electron-packager": "^15.1.0"
   },
   "dependencies": {
     "@antv/g6": "^3.8.1",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
-    "electron": "^10.1.3",
-    "electron-localshortcut": "^3.2.1",
-    "electron-packager": "^15.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^5.0.2"
