--- a/package.json
+++ b/package.json
@@ -20,32 +20,47 @@
   },
   "build": {
     "appId": "com.example.app",
-    "directories":{
-        "output":"build"
+    "directories": {
+      "output": "build"
     }
   },
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/electron-localshortcut": "^3.1.0",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.8",
+    "@types/rimraf": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^4.3.0",
+    "electron": "^10.1.3",
     "electron-builder": "^22.9.1",
+    "electron-localshortcut": "^3.2.1",
+    "electron-packager": "^15.1.0",
     "file-loader": "^6.1.1",
     "source-map-loader": "^1.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "electron": "^10.1.3",
-    "electron-localshortcut": "^3.2.1",
-    "electron-packager": "^15.1.0"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@antv/g6": "^3.8.1",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
-    "react-markdown": "^5.0.2"
+    "react-markdown": "^5.0.2",
+    "rimraf": "^3.0.2",
+    "sanitize-filename": "^1.6.3"
   }
 }
