--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
   "devDependencies": {
-    "@types/cors": "^2.8.8",
     "@types/electron-localshortcut": "^3.1.0",
-    "@types/express": "^4.17.9",
     "@types/node": "^14.14.8",
     "@types/rimraf": "^3.0.0",
     "copy-webpack-plugin": "^6.3.1",
@@ -51,11 +49,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "fs-extra": "^9.0.1",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
