--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^6.1.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "node-fetch": "^2.6.1",
     "source-map-loader": "^1.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
