--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@types/rimraf": "^3.0.0",
     "copy-webpack-plugin": "^6.3.1",
     "css-loader": "^4.3.0",
-    "electron": "^10.1.3",
-    "electron-builder": "^22.9.1",
+    "electron": "^20.0.3",
     "electron-localshortcut": "^3.2.1",
-    "electron-packager": "^15.1.0",
+    "electron-packager": "^15.5.2",
+    "electron-builder": "^23.3.3",
     "file-loader": "^6.1.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
@@ -42,13 +42,14 @@
     "source-map-loader": "^1.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
+    "typescript": "^4.7.4",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
-    "@antv/g6": "^3.8.1",
+    "@antv/g6": "^3.8.5",
+    "@electron/remote": "^2.0.8",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
