--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://registry.npm.taobao.org/
-ELECTRON_MIRROR=https://registry.npmmirror.com/-/binary/electron/
-ELECTRON_BUILDER_BINARIES_MIRROR=https://registry.npmmirror.com/-/binary/electron-builder-binaries/
+# registry=https://registry.npm.taobao.org/
+# ELECTRON_MIRROR=https://registry.npmmirror.com/-/binary/electron/
+# ELECTRON_BUILDER_BINARIES_MIRROR=https://registry.npmmirror.com/-/binary/electron-builder-binaries/
