--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "behavior3editor",
-  "version": "0.1.11",
+  "version": "0.2.0",
   "description": "行为树编辑器",
   "main": "./dist/main.js",
   "scripts": {
     "prestart": "webpack --config webpack.config.js",
     "start": "electron .",
     "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build --overwrite",
+    "build-mac": "electron-packager ./ behavior3editor --platform=darwin --arch=universal --out=./build --overwrite",
     "dist": "npm run prestart && electron-builder --dir && electron-builder --win --x64"
   },
   "repository": {
@@ -26,30 +27,31 @@
   },
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
   "devDependencies": {
-    "@types/electron-localshortcut": "^3.1.0",
-    "@types/node": "^14.14.8",
-    "@types/rimraf": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.1",
-    "css-loader": "^4.3.0",
-    "electron": "^20.0.3",
+    "@types/electron-localshortcut": "^3.1.3",
+    "@types/glob": "^8.1.0",
+    "@types/node": "^20.11.25",
+    "@types/rimraf": "^3.0.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "electron": "^29.1.1",
+    "electron-builder": "^24.13.3",
     "electron-localshortcut": "^3.2.1",
-    "electron-packager": "^15.5.2",
-    "electron-builder": "^23.3.3",
-    "file-loader": "^6.1.1",
-    "less": "^3.12.2",
-    "less-loader": "^7.1.0",
-    "node-fetch": "^2.6.1",
-    "source-map-loader": "^1.1.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.7.4",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "electron-packager": "^17.1.2",
+    "file-loader": "^6.2.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "node-fetch": "^3.3.2",
+    "source-map-loader": "^5.0.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@antv/g6": "^3.8.5",
-    "@electron/remote": "^2.0.8",
+    "@electron/remote": "^2.1.2",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.6.6",
