--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "behavior3editor",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "行为树编辑器",
   "main": "./dist/main.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "electron .",
     "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build --overwrite",
     "build-mac": "electron-packager ./ behavior3editor --platform=darwin --arch=universal --out=./build --overwrite",
+    "dist-mac": "npm run prestart && electron-builder --dir && electron-builder --mac",
     "dist": "npm run prestart && electron-builder --dir && electron-builder --win --x64"
   },
   "repository": {
