--- a/package.json
+++ b/package.json
@@ -1,69 +1,86 @@
 {
   "name": "behavior3editor",
-  "version": "0.2.3",
+  "version": "1.0.0",
+  "main": "dist-electron/main/index.js",
   "description": "行为树编辑器",
-  "main": "./dist/main.js",
+  "author": "zhandouxiaojiji & codetypes",
+  "license": "MIT",
+  "private": true,
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
+    }
+  },
   "scripts": {
-    "prestart": "webpack --config webpack.config.js",
-    "start": "electron .",
-    "build": "electron-packager ./ behavior3editor --platform=win32 --arch=x64 --out=./build --overwrite",
-    "build-mac": "electron-packager ./ behavior3editor --platform=darwin --arch=universal --out=./build --overwrite",
-    "dist-mac": "npm run prestart && electron-builder --dir && electron-builder --mac",
-    "dist": "npm run prestart && electron-builder --dir && electron-builder --win --x64"
+    "dev": "vite",
+    "build": "tsc && vite build && electron-builder",
+    "tsc-check:": "tsc --noEmit",
+    "postinstall": "copy-files-from-to"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/zhandouxiaojiji/behavior3editor.git"
   },
-  "author": "zhandouxiaojiji",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/zhandouxiaojiji/behavior3editor/issues"
   },
-  "build": {
-    "appId": "com.example.app",
-    "directories": {
-      "output": "build"
-    }
-  },
+ 
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
   "devDependencies": {
-    "@types/electron-localshortcut": "^3.1.3",
-    "@types/glob": "^8.1.0",
-    "@types/node": "^20.11.25",
-    "@types/rimraf": "^3.0.2",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
-    "electron": "^29.1.1",
-    "electron-builder": "^24.13.3",
-    "electron-localshortcut": "^3.2.1",
-    "electron-packager": "^17.1.2",
-    "file-loader": "^6.2.0",
-    "less": "^4.2.0",
-    "less-loader": "^12.2.0",
-    "node-fetch": "^3.3.2",
-    "source-map-loader": "^5.0.0",
-    "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4"
+    "@stylistic/eslint-plugin-js": "^1.7.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "copy-files-from-to": "^3.9.1",
+    "electron": "^23.2.0",
+    "electron-builder": "^23.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.60.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.1.4",
+    "vite-electron-plugin": "^0.8.2",
+    "vite-plugin-electron": "^0.11.1",
+    "vite-plugin-electron-renderer": "^0.13.12"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "@antv/g6": "^3.8.5",
+    "@ant-design/icons": "^5.3.3",
+    "@antv/g6": "^4.8.24",
     "@electron/remote": "^2.1.2",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
-    "antd": "^4.6.6",
-    "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-confirm-alert": "^2.6.2",
-    "react-dom": "^16.13.1",
-    "react-markdown": "^5.0.2",
-    "rimraf": "^3.0.2",
-    "sanitize-filename": "^1.6.3",
-    "shineout": "^1.6.1",
-    "sync-request": "^6.1.0"
-  }
+    "@types/electron-localshortcut": "^3.1.3",
+    "@types/node": "^20.11.27",
+    "ahooks": "^3.7.10",
+    "antd": "^5.16.0",
+    "electron-localshortcut": "^3.2.1",
+    "electron-updater": "^5.3.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
+    "json-stable-stringify": "^1.1.1",
+    "react-hotkeys-hook": "^4.5.0",
+    "react-i18next": "^14.1.0",
+    "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
+    "react-merge-refs": "^2.1.1",
+    "ts-key-enum": "^2.0.12",
+    "use-force-update": "^1.0.11",
+    "usehooks-ts": "^3.0.1",
+    "zustand": "^4.5.2"
+  },
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
+  },
+  "copyFilesSettings": {
+    "whenFileExists": "overwrite"
+  },
+  "copyFiles": [
+    {
+      "from": "pre-commit",
+      "to": ".git/hooks/pre-commit"
+    }
+  ]
 }
