--- a/package.json
+++ b/package.json
@@ -1,51 +1,30 @@
 {
   "name": "behavior3editor",
   "version": "1.7.0",
-  "main": "dist-electron/electron/main/index.js",
+  "main": "dist-electron/main/index.js",
   "description": "行为树编辑器",
   "author": "zhandouxiaojiji & codetypes",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "debug": {
     "env": {
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
     }
   },
   "scripts": {
+    "tsc-check:": "tsc --noEmit",
+    "postinstall": "tsx pre-commit.ts",
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
-    "tsc-check:": "tsc --noEmit",
-    "postinstall": "copy-files-from-to"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/zhandouxiaojiji/behavior3editor.git"
+    "preview": "vite preview",
+    "pretest": "vite build --mode=test",
+    "test": "vitest run"
   },
   "bugs": {
     "url": "https://github.com/zhandouxiaojiji/behavior3editor/issues"
   },
   "homepage": "https://github.com/zhandouxiaojiji/behavior3editor#readme",
-  "devDependencies": {
-    "@stylistic/eslint-plugin-js": "^1.8.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "copy-files-from-to": "^3.11.0",
-    "electron": "^30.3.1",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.4",
-    "vite": "^6.2.0",
-    "vite-electron-plugin": "^0.8.3",
-    "vite-plugin-electron": "^0.28.7",
-    "vite-plugin-electron-renderer": "^0.14.5"
-  },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@antv/g6": "^4.8.24",
@@ -55,7 +34,7 @@
     "ahooks": "^3.8.0",
     "antd": "^5.20.0",
     "electron-localshortcut": "^3.2.1",
-    "electron-updater": "^6.3.2",
+    "electron-updater": "^6.3.9",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
@@ -67,10 +46,35 @@
     "ts-key-enum": "^2.0.12",
     "use-force-update": "^1.0.11",
     "usehooks-ts": "^3.1.0",
-    "zustand": "^4.5.4"
+    "zustand": "^5.0.3"
   },
-  "engines": {
-    "node": "^14.18.0 || >=16.0.0"
+  "devDependencies": {
+    "@playwright/test": "^1.48.2",
+    "@stylistic/eslint-plugin-js": "^1.8.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "copy-files-from-to": "^3.11.0",
+    "electron": "^33.2.0",
+    "electron-builder": "^24.13.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "postcss": "^8.4.49",
+    "postcss-import": "^16.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.77.8",
+    "tailwindcss": "^3.4.15",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.0",
+    "vite-electron-plugin": "^0.8.3",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
+    "vitest": "^2.1.5"
   },
   "copyFilesSettings": {
     "whenFileExists": "overwrite"
