--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "behavior3editor",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "main": "dist-electron/main/index.js",
   "description": "行为树编辑器",
   "author": "zhandouxiaojiji & codetypes",
@@ -13,7 +13,7 @@
     }
   },
   "scripts": {
-    "tsc-check:": "tsc --noEmit",
+    "tsc-check": "tsc --noEmit",
     "postinstall": "tsx pre-commit.ts",
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
@@ -38,7 +38,6 @@
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
-    "json-stable-stringify": "^1.1.1",
     "react-i18next": "^14.1.3",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
@@ -57,7 +56,6 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "copy-files-from-to": "^3.11.0",
     "electron": "^33.2.0",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.0",
@@ -75,14 +73,5 @@
     "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
     "vitest": "^3.0.7"
-  },
-  "copyFilesSettings": {
-    "whenFileExists": "overwrite"
-  },
-  "copyFiles": [
-    {
-      "from": "pre-commit",
-      "to": ".git/hooks/pre-commit"
-    }
-  ]
+  }
 }
