--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-http-backend": "^2.5.2",
+    "nanoid": "^5.1.6",
     "react-i18next": "^14.1.3",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
